Cleaned up StringDiffer, in part by splitting out some classes, and removing unused functions. Also, added a test from the GitHub repository.